--- a/_posts/2018-09-10-codility1.markdown
+++ b/_posts/2018-09-10-codility1.markdown
@@ -15,7 +15,7 @@ For example, number 9 has binary representation 1001 and contains a binary gap
 The number 529 has binary representation 1000010001 and contains two binary gaps: one of length 4 and one of length 3. 
 The number 20 has binary representation 10100 and contains one binary gap of length 1. 
 The number 15 has binary representation 1111and has no binary gaps. The number 32 has binary representation 100000and has no binary gaps.
-
+<br>
 Write a function:
 class Solution { public int solution(int N); }
 that, given a positive integer N, returns the length of its longest binary gap. 
@@ -56,6 +56,8 @@ public static int solution(int N) {
 ```
 <br>
 
-##Result
+<div>
+###Result
 
 <img src="{{ site.baseurl }}/assets/codility_result1.png" title="result" class="result">
+</div>
