--- a/_posts/2018-09-10-codility1.markdown
+++ b/_posts/2018-09-10-codility1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "BinaryGap"
+title:  "Codility - BinaryGap"
 date:   2018-09-10 23:43:00
 author: Dongy
 categories: Codility
@@ -9,7 +9,6 @@ cover:  "/assets/codility.png"
 
 ## Lesson 1 - BinaryGap
 
-<div>
 A binary gap within a positive integer N is any maximal sequence of consecutive zeros that is surrounded by ones at both ends in the binary representation of N.
 For example, number 9 has binary representation 1001 and contains a binary gap of length 2. 
 The number 529 has binary representation 1000010001 and contains two binary gaps: one of length 4 and one of length 3. 
@@ -23,8 +22,9 @@ The function should return 0 if N doesn't contain a binary gap.
 For example, given N = 1041 the function should return 5, because N has binary representation 10000010001 and so its longest binary gap is of length 5. Given N = 32 the function should return 0, because N has binary representation '100000' and thus no binary gaps.
 Write an efficient algorithm for the following assumptions:
 * N is an integer within the range [1..2,147,483,647].
-</div>
+<br>
 
+### Code
 
 ```
 public static int solution(int N) {
