--- a/_posts/2018-10-21-앞으로 한달간 일정.markdown
+++ b/_posts/2018-10-21-앞으로 한달간 일정.markdown
@@ -18,7 +18,7 @@ tags:	HTML CSS JS ReactJS ReactNative
 뿐만아니라 최근 ReactNative의 명성이 자자하여 이를 사용해보고싶음.<br>
 하드웨어 기능을 활용하는 앱이 아니라면 Android와 iOS 모두 구동할 수 있어 활용도가 뛰어날 것이기 때문.<br>
 
-따라서 HTML, CSS, JavaScript, ReactJS, ReactNative를 2주간 공부하고 1달간 토이 프로젝트를 진행할 계획.<br>
+따라서 HTML, CSS, JavaScript, ReactJS, ReactNative를 2주간 공부하고 1달간 토이 프로젝트를 진행할 계획.<br><br>
 
 ## 공부 계획
 <ol>
@@ -28,7 +28,7 @@ tags:	HTML CSS JS ReactJS ReactNative
 <li> 주말에는 프론트엔드 기술 공부와 토이 프로젝트 </li>
 </ol>
 * 너무 빡빡하게 느껴질 수 있지만 하고싶으므로 강행
-<br>
+<br><br>
 
 ## 시작이 반
 오늘 간단하게 HTML 공부한 내용을 html로 정리해봄.<br>
