--- a/_posts/2018-10-25-leetcode49.markdown
+++ b/_posts/2018-10-25-leetcode49.markdown
@@ -8,7 +8,7 @@ cover:  "/assets/leetcode-logo.png"
 tags:	leetcode
 ---
 
-Repository to store solutions to various problems in Leetcode practice<br>
-Leetcode 알고리즘 풀이 저장소<br><br>
+<strong>Leetcode 알고리즘 풀이 저장소<strong><br>
+<strong>Repository to store solutions to various problems in Leetcode practice<strong><br>
 
 https://github.com/dongyyy/LeetCode-Java_Solution/
