--- a/_posts/2018-10-25-leetcode49.markdown
+++ b/_posts/2018-10-25-leetcode49.markdown
@@ -1,21 +1,20 @@
 ---
 layout: post
-title:  "LeetCode solutions( LeetCode 알고리즘 풀이 )"
+title:  "LeetCode solutions"
 date:   2019-01-10 00:33:00
 author: Dongy
-categories: Leetcode
+categories: Coding Test
 cover:  "/assets/leetcode-logo.png"
 tags:	leetcode
 ---
+## Repository to store solutions to various problems in Leetcode practice
 
-## Leetcode 알고리즘 풀이 저장소
-# Repository to store solutions to various problems in Leetcode practice
-
-좋은 프로그래머가 되고싶다면 <strong>알고리즘과 자료구조에 대한 지식, 이해 그리고 실전 활용</strong>은 필수인 것 같습니다.<br>
-학부생 때 열심히 공부했건만(이론적으로),,, 알고리즘 문제만 보면 응용하지 못하고 땀을 흘리네요.<br>
-가능하다면 매일 한 문제 이상 풀어보고 코드와 고민한 내용을 [Github Repository][repository]에 commit하겠습니다.<br>
-기왕이면 영어로 풀어보려고 [leet code][leetcode]를 선택했습니다 ㅋ.ㅋ<br>
-해보즈아 !<br>
+좋은 프로그래머가 되고싶다면 <strong>알고리즘과 자료구조에 대한 지식, 이해 그리고 실전 활용</strong>은 필수인 것 같습니다.<br><br>
+학부생 때 열심히 공부했는데!(이론적으로만,,,) 알고리즘 문제만 보면 응용하지 못하고 땀을 흘리네요.<br><br>
+가능하다면 <strong>매일 한 문제 이상</strong> 풀어보고 코드와 고민한 내용을 제 github repository에 commit 하겠습니다.<br>
+[dongy's Github Repository][repository]<br><br>
+기왕이면 영어로 풀어보려고 [leet code][leetcode]를 선택했습니다 ㅋ.ㅋ<br><br>
+해보즈아 !<br><br>
 
 [leetcode]: https://leetcode.com/
 [repository]: https://github.com/dongyyy/LeetCode-Java_Solution/
