--- a/_posts/2018-09-10-codility1.markdown
+++ b/_posts/2018-09-10-codility1.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "Codility - BinaryGap"
 date:   2018-09-10 23:43:00
 author: Dongy
-categories: CodingTest
+categories: Coding-Test
 cover:  "/assets/codility.png"
 tags:	codility java BinaryGap
 ---
