--- a/_posts/2020-02-15-lectuer.markdown
+++ b/_posts/2020-02-15-lectuer.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[Programmers]코딩테스트와 실무 역량 모두 잡는 알고리즘 스터디1"
+title:  "[Programmers]코딩테스트와 실무 역량 모두 잡는 알고리즘 스터디 1"
 date:   2019-03-18 20:10:32
 author: Dongy
 categories: Study
@@ -38,6 +38,7 @@ cover:
 - 아직 코테에 쓸 IDE로는 Intelli J 보단 Eclipse가 편하다.(Android Studio를 1년이나 썼는데도...)
 - 아직 JUNIT 보단 디버깅 툴이나 print 함수가 편하다.
 - RxJava를 책으로 볼 때는 이해가 어려웠는데 비록 RxSwift지만 강의로 들으니 훨씬 이해가 잘 됐다.(그동안 강의를 찾았으나 찾지 못했다.)<br> 출퇴근하면서 열씸히 봐야지~
+- 코테 공부하기 시간 아깝다고 생각했었는데 코드리뷰를 통해 코드의 품질을 높이는 방법까지 알려주신다고 하니 열심히해야겠다!
 
 
 
