공지사항 수정

--- a/_posts/공지사항.markdown
+++ b/_posts/공지사항.markdown
@@ -3,8 +3,7 @@ layout: post
 title:  "안내사항!"
 date:   2020-01-01 01:01:01
 author: minssan9
-categories: Post
-cover:  "/assets/the_red_sea.jpg"
+categories: Memo
 ---
 
 ## 안내사항
