--- a/_posts/2020-01-01-공지사항.markdown
+++ b/_posts/2020-01-01-공지사항.markdown
@@ -10,15 +10,23 @@ categories: Memo
 
 <strong>안내사항 (필독)</strong><br>
 양질의 통화를 위해 Skype 설치 및 가입이 필요합니다.<br>
-https://skype.daesung.com/main.asp<br>
+[https://skype.daesung.com/main.asp][skype]<br>
 <br>
 <strong>앱 다운로드</strong><br>
-iphone - https://apps.apple.com/kr/app/iphoneyong-skype/id304878510<br>
-android - https://play.google.com/store/apps/details?id=com.skype.raider&hl=ko<br>
+iphone - [https://apps.apple.com/kr/app/iphoneyong-skype/id304878510][iphone]<br>
+android - [https://play.google.com/store/apps/details?id=com.skype.raider&hl=ko][android]<br>
 <br>
 결제링크 * 결제전에는 꼭 스케줄 조정 후 결제해주세요!<br>
-주5일 10분 - http://www.payapp.kr/L/z1JbVE<br>
-주5일 20분 - http://www.payapp.kr/L/z1IS58<br>
-주5일 30분 - http://www.payapp.kr/L/z1IS64<br>
-주5일 40분 - http://www.payapp.kr/L/z1IS4F<br>
+주5일 10분 - [http://www.payapp.kr/L/z1JbVE][10]<br>
+주5일 20분 - [http://www.payapp.kr/L/z1IS58][20]<br>
+주5일 30분 - [http://www.payapp.kr/L/z1IS64][30]<br>
+주5일 40분 - [http://www.payapp.kr/L/z1IS4F][40]<br>
 <br> 
+
+[10]:http://www.payapp.kr/L/z1JbVE
+[20]:http://www.payapp.kr/L/z1IS58
+[30]:http://www.payapp.kr/L/z1IS64
+[40]:http://www.payapp.kr/L/z1IS4F
+[skype]:https://skype.daesung.com/main.asp
+[iphone]:https://apps.apple.com/kr/app/iphoneyong-skype/id304878510
+[android]:https://play.google.com/store/apps/details?id=com.skype.raider&hl=ko
