--- a/_posts/2020-01-01-공지사항.markdown
+++ b/_posts/2020-01-01-공지사항.markdown
@@ -2,8 +2,9 @@
 layout: post
 title:  "안내사항!"
 date:   2020-01-01 01:01:01
-author: minssan9
+author: 영어문
 categories: Memo
+cover:  "/assets/the_red_sea.jpg"
 ---
 
 ## 안내사항
