--- a/_posts/2020-01-01-공지사항.markdown
+++ b/_posts/2020-01-01-공지사항.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "안내사항!"
 date:   2020-01-01 01:01:01
 author: 영어문
-categories: Memo
+categories: Notice
 cover:  "/assets/the_red_sea.jpg"
 ---
 
