공지사항 수정

--- a/_posts/2020-01-01-공지사항.markdown
+++ b/_posts/2020-01-01-공지사항.markdown
@@ -10,6 +10,22 @@ cover: "/assets/the_red_sea.jpg"
 ## 안내사항
 
 <strong>안내사항 (필독)</strong><br>
+다양한 컨텐츠가 제공되며 화상 / 음성통화를 제공합니다.<br>
+원어민 선생님들은 전문교육과정을 수료받은 전화영어센터 출신 강사입니다.<br>
+<br>
+1. 과정 선택<br>
+- 기초회화 / 일상회화 / 비즈니스회화<br>
+- 시험대비 (TOEIC Speaking / OPIC )<br>
+2. 수업 시간 선택<br>
+3. 초기 Level-test 진행<br>
+4. 수업 시작<br>
+<br>
+공휴일 수업은 쉽니다.<br>
+<br>
+원어민 선생님들에게 평균보다 높은 급여를 지급하여,<br>
+일반 전화영어 서비스보다 질 좋은 서비스를 제공합니다.<br>
+
+
 양질의 통화를 위해 Skype 설치 및 가입이 필요합니다.<br>
 [https://skype.daesung.com/main.asp][skype]<br>
 <br>
